syntax = "proto3";

option java_package = "br.com.macielgoncalves.grpc";
option java_multiple_files = true;

package br.com.macielgoncalves.grpc;

service ProductService {
  rpc Create(ProductResquet) returns (ProductResponse);
  rpc FindById(RequestById) returns (ProductResponse);
  rpc Delete(RequestById) returns (ProductResponse);
  rpc FindAll(EmptyRequesty) returns (ProductResponseList);
}

message EmptyRequesty {}

message ProductResponseList {
  repeated ProductResponse products = 1;
}

message RequestById {
  int64 id = 1;
}

message ProductResquet {
  string name = 1;
  double price = 2;
  int32 quantity_in_stock = 3;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  double price = 3;
  int32 quantity_in_stock = 4;
}
